# DJ

./: README.md  SOLAR_INSPECTION_SYSTEM.md
Edge-SDK-master/examples/init/: app_info.h
solar-inspection/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
solar-inspection/.github/: pull_request_template.md
solar-inspection/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
solar-inspection/.github/workflows/: ci.yml
solar-inspection/docs/project-management/: BRANCHING_STRATEGY.md  CODE_REVIEW.md  RELEASE_PROCESS.md
solar-inspection/include/ai/: detector.hpp
solar-inspection/include/core/: system.hpp
solar-inspection/include/utils/: logger.hpp
solar-inspection/include/video/: video_manager.hpp
solar-inspection/src/: CMakeLists.txt  main.cpp
solar-inspection/src/ai/: CMakeLists.txt  detector.cpp
solar-inspection/src/core/: CMakeLists.txt  system.cpp
solar-inspection/src/utils/: CMakeLists.txt  logger.cpp
solar-inspection/src/video/: CMakeLists.txt  video_manager.cpp
solar-inspection/test/: CMakeLists.txt
solar-inspection/test/ai/: CMakeLists.txt
solar-inspection/test/core/: CMakeLists.txt  test_system.cpp
solar-inspection/test/utils/: CMakeLists.txt
solar-inspection/test/video/: CMakeLists.txt
